# selene-base

./: .gitignore  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
config/: region_southpole.yaml  weights_default.yaml  weights_legacy.yaml  weights_legacy_v6.yaml
data/outputs/: v1.5_catalog_main_table.csv  v1.5_catalog_wueller_evaluation.csv  wueller_sites_scored_by_selene.json
docs/: v1.5_catalog_report.md
notebooks/: 01_data_inventory.py  02_slope_first_pass.py  03_full_pipeline.py  04_validation_and_viz.py  05_coupling_visualization.py  06_usgs_polygons_validation.py  07_per_region_ranking.py  08_wueller_comparison.py  09_headline_v141.py  10_resolution_v15.py  11_v15_catalog_report.py
scripts/: build_sample_data.py  regen_coupling_diagnostics_v14.py
src/selene_base/: __init__.py  cli.py
src/selene_base/criteria/: __init__.py  coupling.py  eva_psr_access.py  hazard.py  ice.py  illumination.py  los_to_earth.py  multi_volatile.py  pgv_seismic.py  seismic.py  slope.py  thermal.py
src/selene_base/criteria/data/scarps_mishra_kumar_2022/: README.md  main_segments.dbf  main_segments.prj  main_segments.shp  main_segments.shx
src/selene_base/criteria/data/scarps_watters_2015_polar/: README.md  (+4 more)
src/selene_base/data/: __init__.py  _http.py  diviner_prp.py  download.py  load.py  pds4_table.py  rasterize.py  reproject.py  triangle_to_grid.py
src/selene_base/pipeline/: __init__.py  compare.py  compare_wueller.py  coupling_sweep.py  preprocess.py  preprocess_tiled.py  rank.py  rank_per_region.py  rank_per_region_tiled.py  score.py  score_wueller_sites.py  sensitivity.py  validate.py  validate_per_region.py  viz.py
src/selene_base/scoring/: __init__.py  aggregate.py  normalize.py  ranking.py
src/selene_base/validation/: __init__.py  comparison.py  diagnostic.py  nasa_regions.py  sensitivity.py  wueller_comparison.py  wueller_scoring.py
src/selene_base/validation/data/: nasa_regions_polygons_usgs.geojson  wueller_2026_sites.csv
src/selene_base/viz/: __init__.py  site_report.py  webmap.py
tests/: conftest.py  test_aggregate.py  test_comparison.py  test_coupling.py  test_data_diviner.py  test_data_illumination.py  test_data_lend.py  test_data_loaders_exist.py  test_data_lola.py  test_data_los_to_earth.py  test_data_robbins.py  test_diagnostic.py  test_eva_psr_access.py  test_hazard.py  test_ice.py  test_illumination.py  test_lola_source_override.py  test_los_to_earth.py  test_los_to_earth_gpu.py  test_multi_volatile.py  test_nasa_regions.py  test_normalize.py  test_pds4_table.py  test_per_azimuth_chunking.py  test_per_region_validation.py  test_pgv_seismic.py  test_pipeline_smoke.py  test_preprocess_tiled.py  test_rank_per_region_tiled.py  test_ranking.py  test_ranking_per_region.py  test_rasterize.py  test_reproject.py  test_seismic.py  test_sensitivity.py  test_site_report.py  test_slope.py  test_smoke.py  test_thermal.py  test_topsis.py  (+5 more)
(+5 files in other folders)
