[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "selene-base"
version = "0.1.0"
description = "Multi-criteria habitat suitability analyzer for the lunar south pole."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Alex Woods" }]
keywords = ["lunar", "artemis", "gis", "habitat-suitability", "remote-sensing"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "rasterio>=1.3",
    "rioxarray>=0.15",
    "geopandas>=0.14",
    "numpy>=1.26",
    "scipy>=1.11",
    "xarray>=2024.1",
    "pyproj>=3.6",
    "folium>=0.15",
    "pyyaml>=6.0",
    "typer>=0.12",
    "matplotlib>=3.8",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "shapely>=2.0",
    "requests>=2.31",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
gpu = [
    # Optional GPU acceleration for the LOLA horizon-profile ray-march
    # (selene_base.criteria.los_to_earth.derive_horizon_profile, use_gpu=True).
    # Pick the wheel that matches the host CUDA driver: cupy-cuda13x for
    # CUDA 13 (e.g. NVIDIA Spark / GB10 Blackwell), cupy-cuda12x otherwise.
    "cupy-cuda13x>=14.0; platform_machine == 'aarch64'",
    "cupy-cuda12x>=14.0; platform_machine == 'x86_64'",
]

[project.scripts]
selene = "selene_base.cli:app"

[project.urls]
Repository = "https://github.com/alexbwoods/selene-base"

[tool.hatch.build.targets.wheel]
packages = ["src/selene_base"]

[tool.hatch.build.targets.sdist]
include = [
    "src/selene_base",
    "config",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# typer's idiomatic API uses callables in argument defaults.
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["selene_base"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
files = ["src/selene_base"]
